# capstone_1_ROS

./: README.md
ball_detection/src/: ball_detect.cpp
ball_track/: CMakeLists.txt  package.xml
ball_track/src/: ball_detect_Hough_circle_HSV.cpp  ball_detect_Hough_circle_RGB.cpp  basket.cpp  main.cpp  main_book_centerdistance_HSV.cpp  main_book_centerdistance_RGB.cpp  main_top.cpp  roller.cpp
comm_tcp/: CMakeLists.txt
core_msgs/: CMakeLists.txt
core_msgs/msg/: ball_position.msg  ball_position_b.msg  ball_position_r.msg  ball_position_top.msg  roller_num.msg
data_integrate/: CMakeLists.txt
data_integrate/launch/: start_up.launch  start_up_wo_lidar.launch
data_integrate/src/: angle.cpp  calib.cpp  data_integration.cpp  demo.cpp  demo_return.cpp  demo_return2.cpp  demo_return_red.cpp  demov2.cpp  demov3.cpp  front.cpp  main.cpp  mainv2.cpp  rotate.cpp  util.hpp  util_rtn.hpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/core_msgs/: ball_position.h  ball_position_r.h  markermsg.h  multiarray.h
devel/lib/ball_detection/: ball_detect_node
devel/lib/ball_track/: ball_track  ball_track_node
devel/lib/comm_tcp/: client_node  server_node
devel/lib/data_integrate/: data_integation_node  data_show_node
devel/lib/image_transport_tutorial/: my_publisher  my_subscriber  my_subscriber_law_image
devel/lib/pkgconfig/: ball_detection.pc  ball_track.pc  comm_tcp.pc  core_msgs.pc  data_integrate.pc  image_transport_tutorial.pc  rplidar_ros.pc  webcam.pc  xbox_ctrl.pc
devel/lib/python2.7/dist-packages/core_msgs/msg/: __init__.py  _ball_position.py  _ball_position_r.py  _markermsg.py  _multiarray.py
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/webcam/: webcam_node
devel/lib/xbox_ctrl/: xbox_ctrl_Client  xbox_ctrl_node
devel/share/ball_detection/cmake/: ball_detectionConfig.cmake
devel/share/ball_track/cmake/: ball_trackConfig.cmake
devel/share/comm_tcp/cmake/: comm_tcpConfig.cmake
devel/share/common-lisp/ros/core_msgs/msg/: _package.lisp  _package_ball_position.lisp  _package_ball_position_r.lisp  _package_markermsg.lisp  _package_multiarray.lisp  ball_position.lisp  ball_position_r.lisp  core_msgs-msg.asd  markermsg.lisp  multiarray.lisp
devel/share/core_msgs/cmake/: core_msgs-msg-paths.cmake  core_msgsConfig.cmake
devel/share/data_integrate/cmake/: data_integrateConfig.cmake
devel/share/gennodejs/ros/core_msgs/msg/: _index.js  ball_position.js  ball_position_r.js  markermsg.js  multiarray.js
devel/share/image_transport_tutorial/cmake/: image_transport_tutorialConfig.cmake
devel/share/roseus/ros/core_msgs/: manifest.l
devel/share/roseus/ros/core_msgs/msg/: ball_position.l  ball_position_r.l  markermsg.l  multiarray.l
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
devel/share/webcam/cmake/: webcamConfig.cmake
devel/share/xbox_ctrl/cmake/: xbox_ctrlConfig.cmake
image_transport_tutorial/src/: my_subscriber.cpp  my_subscriber_law_image.cpp
lidar/: CMakeLists.txt  package.xml
lidar/msg/: coor.msg
lidar/src/: lidar_coor.cpp
src/ball_detection/src/: ball_detect.cpp
src/ball_track/: CMakeLists.txt  README.md  main.cpp
src/ball_track/src/: main.cpp
src/comm_tcp/: README.md  package.xml
src/comm_tcp/src/: server_node.cpp
src/data_integrate/src/: data_integration.cpp  data_show.cpp
src/image_transport_tutorial/: CMakeLists.txt
src/image_transport_tutorial/src/: my_publisher.cpp
src/webcam/src/: webcam_node.cpp
src/xbox_ctrl/: CMakeLists.txt
src/xbox_ctrl/src/: xbox_ctrl.cpp  xbox_node.cpp
webcam/: CMakeLists.txt  package.xml
xbox_ctrl/src/: xbox_ctrl.cpp
